component/viewer/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides.css
/*
 *  Licensed to the Apache Software Foundation (ASF) under one
 *  or more contributor license agreements.  See the NOTICE file
 *  distributed with this work for additional information
 *  regarding copyright ownership.  The ASF licenses this file
 *  to you under the Apache License, Version 2.0 (the
 *  "License"); you may not use this file except in compliance
 *  with the License.  You may obtain a copy of the License at
 *
 *        http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing,
 *  software distributed under the License is distributed on an
 *  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 *  KIND, either express or implied.  See the License for the
 *  specific language governing permissions and limitations
 *  under the License.
 */

.table .form-control:disabled {
    background-color: transparent;
    border: none;
    text-align: center;
    height: 23px;
    padding: 1px 0;
    cursor: default;
    outline: none;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
}

.table > thead > tr > th, td {
    text-align: left;
    vertical-align: middle;
}

.navbar {
    border-radius: 0;
}

#veil {
    z-index: 40000;
    background-image: none;
    background-color: black;

    display: none;
    position:fixed;
    top:0;
    left:0;
    height: 100%;
    width: 100%;
    opacity: 0.4;
    filter: alpha(opacity=40);
}

.table .table td {
    border: none;
}

/** added here because looks lke EntityPropertiesPanel.css is currently excluded ...? */
.entityPropertiesPanel .property {
    padding-top: 5px;
    padding-bottom: 5px;
}

.pagination {
    margin: 0;
}

body {
    padding-top: 80px;
}

.nav > li > a {
    padding-left: 10px;
    padding-right: 10px;
}

/* fix for Firefox */
th > a > div > strong {
    float: left;
}

/* Labels on the left START */
div.label-left.form-group {
    width: 100%;
}

div.label-left label.control-label {
    width: 30%;
    float: left;
    padding-top: 7px;
    padding-left: 10px;
    text-align: justify;
}

div.label-top label.control-label {
    padding-left: 10px;
}

div.label-left .scalarValueWrapper {
    width: 70%;
    float: right;
}

div.label-top .scalarValueWrapper {
    width: 99%;
    display: block;
    padding-left: 8px;
    padding-right: 20px;
}

div.label-left .scalarValueWrapper .form-control {
    width: 100%;
}

div.label-left .scalarValueWrapper .form-control.file-caption {
    width: 69%;
}

div.label-left .scalarValueWrapper .file-input .input-group-btn {
    display: inline;
}

div.label-left .scalarValueWrapper .input-group {
    width: 100%;
}

div.label-left .scalarValueWrapper .input-group .input-group-addon {
    width: 1%;
}

div.label-left .choicesPlaceholder {
    display: inline-block;
    width: 100%;
    vertical-align: -webkit-baseline-middle;
    vertical-align: middle;
}
/* Labels on the right END */

